--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/jquery"]
 	path = external/jquery
 	url = https://github.com/jquery/jquery.git
+[submodule "external/bootstrap"]
+	path = external/bootstrap
+	url = https://github.com/twbs/bootstrap-sass.git
