Update on first iteration of rsvp functionality
RSVP models and initial functionality that for creating
and accepting rsvps.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Django==1.10.4
 django-choice-object==0.9
 django-jinja==2.2.1
+hashids==1.1.0
 Jinja2==2.8
 MarkupSafe==0.23
+qrcode==5.3
 six==1.10.0
